--- a/taskmaster/app/src/main/res/values/strings.xml
+++ b/taskmaster/app/src/main/res/values/strings.xml
@@ -31,4 +31,18 @@
         <item>In_Progress</item>
         <item>Complete</item>
     </string-array>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="action_sign_up">Sign Up</string>
+    <string name="title_activity_signUp">signUp</string>
+    <string name="label_enter_code">"Enter Verification Code "</string>
+    <string name="logout">logout</string>
+    <string name="dialog_text">Error</string>
 </resources>
