--- a/taskmaster/app/src/main/res/values/strings.xml
+++ b/taskmaster/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="taskDesc">Task Description</string>
     <string name="doTask">Do Something</string>
     <string name="totalTask">total tasks: 0</string>
+    <string name="upload">Upload Image</string>
+
 
     <string name="back">Back</string>
 
