--- a/taskmaster/app/src/main/res/values/strings.xml
+++ b/taskmaster/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TaskMaster</string>
     <string name="task">My Tasks</string>
     <string name="addTask">ADD TASK</string>
-    <string name="allTask">ALL TASKS</string>
+    <string name="allTask">All Tasks</string>
 
     <string name="addTask2">Add Task</string>
     <string name="taskTitle">Task Title</string>
@@ -47,4 +47,14 @@
     <string name="label_enter_code">"Enter Verification Code "</string>
     <string name="logout">logout</string>
     <string name="dialog_text">Error</string>
+
+
+        <!-- TODO: Remove or change this placeholder text -->
+        <string name="hello_blank_fragment">Hello blank fragment</string>
+        <string name="login">Login</string>
+        <string name="password">Password</string>
+        <string name="e_mail">Email</string>
+        <string name="tag">Let\'s join us and \nBuild your Tasks</string>
+        <string name="register">Register</string>
+        <string name="your_name">User Name</string>
 </resources>
