--- a/taskmaster/app/src/main/res/values/strings.xml
+++ b/taskmaster/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
         <string name="tag">Let\'s join us and \nBuild your Tasks</string>
         <string name="register">Register</string>
         <string name="your_name">User Name</string>
+    <string name="translate">Translate</string>
 </resources>
